2003-11-18  James E Wilson  <wilson@specifixinc.com>

	* emulparams/elf64_ia64.sh (OTHER_PLT_RELOC_SECTIONS): Include
	.rela.opd if -pie.

2003-11-10  Jonathan Wilson <jonwil@tpgi.com.au>

	* scripttempl/pe.sc: Add support for TLS sections.

2003-11-09  Alan Modra  <amodra@bigpond.net.au>

	* configure.host (HOSTING_LIBS): Group libgcc and libc with
	--start-group, --end-group pair.
	(*-*-netbsd*, am33_2.0-*-linux*): Use the default HOSTING_LIBS.
	(am33_2.0-*-linux*): Edit default HOSTING_CRT0.
	(arm*-*-linux-gnu*): Remove extraneous '*' in sed expression.
	(hppa*64*-*-linux*, hppa*-*-linux*): Remove target specific case.

2003-11-07  Jonathan R. Grant  <jg-binutils@jguk.org>

	* ldfile.c (ldfile_open_file): Use "No such file" error message.

2003-11-06  Bruno Rohee  <bruno@rohee.com>

	* ls.texinfo: Fix "the the" typo.

2003-11-05  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/pe.em (gld_${EMULATION_NAME}_after_open): Only do
	pe_dll_extra_pe_debug stuff when DLL_SUPPORT defined.
	(pr_sym): Move inside #ifdef DLL_SUPPORT.

	* emultempl/ppc64elf.em (gld${EMULATION_NAME}_new_vers_pattern): Zap
	unused variable.

	* emulparams/elf32_i860.sh (TEXT_START_ADDR): Define.

2003-11-04  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/elf32.em (gld${EMULATION_NAME}_before_allocation): Call
	_bfd_elf_tls_setup.

2003-10-31  Nick Clifton  <nickc@redhat.com>

	* ldlang.c (lookup_name): When looking for a previously loaded
	file compare the local_sym_name not the filename, as the
	filename might have been transformed via the search directory
	path lookup.
	If the sought-for file has not been found in the input file
	chain then create a new node with the search_dirs_flag set so
	that the entire set of directory paths will be scanned for it.

2003-10-30  Andrew Cagney  <cagney@redhat.com>

	* emultempl/pe.em, pe-dll.c: Replace "struct symbol_cache_entry"
	with "struct bfd_symbol".

2003-10-30 Phil Edwards <phil@codesourcery.com>
